--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
     "react-moment": "^1.1.1",
